final vrm askip

--- a/main.html
+++ b/main.html
@@ -60,8 +60,8 @@
 </section>
 
 <div id="ENBAS">
-    <p> Si il n'y a pas de changement, faite SHIFT + f5 (vider le cache)</p>
-    <div id="list"><iframe src="connexion.txt" width=600 height=400 frameborder=0 id="frame"></iframe></div>
+    <p> Si il n'y a pas de changement, faite SHIFT + f5 (Permet de vider le cache)</p>
+    <div id="list"><iframe src="connexion.txt" width=50% height=200 frameborder=0 id="frame"></iframe></div>
 
 </div>
 
